# taskline

./: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build.yml
apps/desktop/: package.json  tailwind.config.js  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/migrations/: 001_initial.sql  004_worklog_entry_type.sql  005_status_entry_type.sql  006_estimate_entry_type.sql  008_releases.sql  009_release_name_key.sql
apps/desktop/src-tauri/src/: lib.rs  repository.rs
docs/devthread-ui-polish-pack/: 00_MASTER_PROMPT.md  01_VISUAL_DIAGNOSIS.md  02_DESIGN_DIRECTION.md  03_DESIGN_TOKENS.md  04_COMPONENT_SYSTEM.md  05_PAGE_BY_PAGE_INSTRUCTIONS.md  06_COPYWRITING_RULES.md  07_IMPLEMENTATION_PHASES.md  08_UI_QA_CHECKLIST.md  09_AGENT_REVIEW_PROMPTS.md  README.md
docs/ui_ux_rag_pack/: 00_agent_instruction.md  01_quality_model.md  02_information_architecture_navigation.md  03_layout_spacing_visual_hierarchy.md  04_color_tokens_theming.md  05_typography_iconography.md  06_component_decision_matrix.md  07_loading_latency_optimistic_ui.md  08_empty_error_success_states.md  09_forms_inputs_validation.md  10_tables_lists_filters_search.md  11_motion_animation_microinteractions.md  12_accessibility_inclusive_design.md  13_responsive_mobile_touch.md  14_dashboards_data_visualization.md  15_ai_agent_product_ui.md  16_bad_ui_antipatterns.md  17_review_checklists.md  18_prompt_templates.md  19_sources.md  20_visual_design_system_from_scratch.md  21_spacing_layout_grid_rules.md  22_typography_scale.md  23_border_radius_shadow_depth.md  24_color_generation_algorithm.md  25_component_size_specs.md  26_product_screen_blueprints.md  27_landing_page_blueprints.md  28_dashboard_blueprints.md  29_saas_app_shell_blueprints.md  README.md  (+8 more)
(+58 files in other folders)
