[package]
name = "taskline"
version = "0.1.0"
description = "A private, local-first developer work journal"
authors = ["Taskline contributors"]
edition = "2021"

[lib]
name = "taskline_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "Taskline"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
log = "0.4"
reqwest = "0.13.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-log = "2"
uuid = { version = "1", features = ["serde", "v7"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[dev-dependencies]
tempfile = "3"
